--- a/portfolio/web/src/components/layout/Footer.astro
+++ b/portfolio/web/src/components/layout/Footer.astro
@@ -3,29 +3,17 @@ const currentYear = new Date().getFullYear();
 ---
 
 <footer>
-    <div class="social-links">
-        <a
-            href="https://github.com/mathieupiton"
-            target="_blank"
-            rel="noopener noreferrer"
-        >
-            <i class="fab fa-github"></i>
-        </a>
-        <a
-            href="https://linkedin.com/in/mathieupiton"
-            target="_blank"
-            rel="noopener noreferrer"
-        >
-            <i class="fab fa-linkedin"></i>
-        </a>
-        <a
-            href="https://twitter.com/mathieupiton"
-            target="_blank"
-            rel="noopener noreferrer"
-        >
-            <i class="fab fa-x-twitter"></i>
-        </a>
-    </div>
-    <a href="/mentions-legales">Mentions légales</a>
-    <p>&copy; {currentYear} Mathieu Piton - Tous droits réservés</p>
+  <div class="social-links">
+    <a href="https://github.com/mathieupiton" target="_blank" rel="noopener noreferrer">
+      <i class="fab fa-github"></i>
+    </a>
+    <a href="https://linkedin.com/in/mathieupiton" target="_blank" rel="noopener noreferrer">
+      <i class="fab fa-linkedin"></i>
+    </a>
+    <a href="https://twitter.com/mathieupiton" target="_blank" rel="noopener noreferrer">
+      <i class="fab fa-x-twitter"></i>
+    </a>
+  </div>
+  <a href="/mentions-legales">Mentions légales</a>
+  <p>&copy; {currentYear} Mathieu Piton - Tous droits réservés</p>
 </footer>
